--- a/ESM2_classification_FINETUNED_tf.ipynb
+++ b/ESM2_classification_FINETUNED_tf.ipynb
@@ -12,15 +12,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "4c5bf8d4",
-      "metadata": {
-        "id": "4c5bf8d4"
-      },
-      "outputs": [],
       "source": [
-        "! pip install transformers evaluate datasets requests pandas sklearn"
-      ]
+        "! pip install transformers datasets"
+      ],
+      "metadata": {
+        "id": "1xI0zejXCEVf"
+      },
+      "id": "1xI0zejXCEVf",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -40,11 +40,26 @@
         "model = TFEsmForSequenceClassification.from_pretrained(\"francescopatane/esm2m35finetunedcytmem\", output_attentions=True)"
       ],
       "metadata": {
-        "id": "xTvoLKmdSWws"
+        "id": "xTvoLKmdSWws",
+        "outputId": "735c633d-ccca-41a9-ded1-15262521df2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "xTvoLKmdSWws",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "All model checkpoint layers were used when initializing TFEsmForSequenceClassification.\n",
+            "\n",
+            "All the layers of TFEsmForSequenceClassification were initialized from the model checkpoint at francescopatane/esm2m35finetunedcytmem.\n",
+            "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFEsmForSequenceClassification for predictions without further training.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -70,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "ddbe2b2d",
       "metadata": {
         "id": "ddbe2b2d"
@@ -87,7 +102,24 @@
     {
       "cell_type": "code",
       "source": [
-        "sequence_to_predict = [\"MAVMAPRTLLLLLSGALALTQTWAGSHSMRYFFTSVSRPGRGEPRFIA\"]"
+        "sequence_to_predict = [\"MKGKNRSLFVLLVLLLLHKVNNVLLERTIETLLECKNEYVKGENGYKLAKGHHCVEEDNL\\\n",
+        "ERWLQGTNERRSEENIKYKYGVTELKIKYAQMNGKRSSRILKESIYGAHNFGGNSYMEGK\\\n",
+        "DGGDKTGEEKDGEHKTDSKTDNGKGANNLVMLDYETSSNGQPAGTLDNVLEFVTGHEGNS\\\n",
+        "RKNSSNGGNPYDIDHKKTISSAIINHAFLQNTVMKNCNYKRKRRERDWDCNTKKDVCIPD\\\n",
+        "RRYQLCMKELTNLVNNTDTNFHRDITFRKLYLKRKLIYDAAVEGDLLLKLNNYRYNKDFC\\\n",
+        "KDIRWSLGDFGDIIMGTDMEGIGYSKVVENNLRSIFGTDEKAQQRRKQWWNESKAQIWTA\\\n",
+        "MMYSVKKRLKGNFIWICKLNVAVNIEPQIYRWIREWGRDYVSELPTEVQKLKEKCDGKIN\\\n",
+        "YTDKKVCKVPPCQNACKSYDQWITRKKNQWDVLSNKFISVKNAEKVQTAGIVTPYDILKQ\\\n",
+        "ELDEFNEVAFENEINKRDGAYIELCVCSVEEAKKNTQEVVTNVDNAAKSQATNSNPISQP\\\n",
+        "VDSSKAEKVPGDSTHGNVNSGQDSSTTGKAVTGDGQNGNQTPAESDVQRSDIAESVSAKN\\\n",
+        "VDPQKSVSKRSDDTASVTGIAEAGKENLGASNSRPSESTVEANSPGDDTVNSASIPVVSG\\\n",
+        "ENPLVTPYNGLRHSKDNSDSDGPAESMANPDSNSKGETGKGQDNDMAKATKDSSNSSDGT\\\n",
+        "SSATGDTTDAVDREINKGVPEDRDKTVGSKDGGGEDNSANKDAATVVGEDRIRENSAGGS\\\n",
+        "TNDRSKNDTEKNGASTPDSKQSEDATALSKTESLESTESGDRTTNDTTNSLENKNGGKEK\\\n",
+        "DLQKHDFKSNDTPNEEPNSDQTTDAEGHDRDSIKNDKAERRKHMNKDTFTKNTNSHHLNS\\\n",
+        "NNNLSNGKLDIKEYKYRDVKATREDIILMSSVRKCNNNISLEYCNSVEDKISSNTCSREK\\\n",
+        "SKNLCCSISDFCLNYFDVYSYEYLSCMKKEFEDPSYKCFTKGGFKDKTYFAAAGALLILL\\\n",
+        "LLIA\"]"
       ],
       "metadata": {
         "id": "9mY8jzabVg-7"
@@ -102,11 +134,23 @@
         "tokenized_sequence = tokenizer(sequence_to_predict)"
       ],
       "metadata": {
-        "id": "_QAiHIbaVwWo"
+        "id": "_QAiHIbaVwWo",
+        "outputId": "570a409b-d64c-4790-d761-2a0c90fba078",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "_QAiHIbaVwWo",
       "execution_count": 5,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Token indices sequence length is longer than the specified maximum sequence length for this model (1026 > 1024). Running this sequence through the model will result in indexing errors\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Hw14J5GWMPt",
-        "outputId": "cfd7bc26-777a-4695-9fb9-6c3a725751b2"
+        "outputId": "297592bc-7800-4445-f1ae-4d57f8822f71"
       },
       "id": "-Hw14J5GWMPt",
       "execution_count": 8,
@@ -188,7 +232,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 21s 21s/step\n"
+            "1/1 [==============================] - 15s 15s/step\n"
           ]
         }
       ]
@@ -247,8 +291,18 @@
         "id": "ViB4_15qY15C"
       },
       "id": "ViB4_15qY15C",
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Transformers interpret"
+      ],
+      "metadata": {
+        "id": "dOeqOAztDng2"
+      },
+      "id": "dOeqOAztDng2"
     }
   ],
   "metadata": {
